--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="password">Password</string>
     <string name="go_in">GO IN</string>
     <string name="Dont_have_account">Don\'t have account?</string>
+    <string name="Today">Today</string>
+    <string name="My_Medicine">My Medicine</string>
+    <string name="Person">Person</string>
+    <string name="Calendar">Calendar</string>
 </resources>
