added new xml for editing name and age, return buttons as menu at the bottom, added email field for firebase data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
     <string name="set">SET</string>
     <string name="cancle">CANCLE</string>
     <string name="Personal_Information">Personal Information</string>
-    <string name="user_name">USERNAME</string>
+    <string name="user_name">TEST</string>
     <string name="years_old">year(s) old</string>
     <string name="Click_on_text">Click on text to edit it</string>
     <string name="Set_reminder">SET REMINDER</string>
